--- a/stackOverflow.css
+++ b/stackOverflow.css
@@ -1,6 +1,7 @@
 /*advertisements*/
 .js-consent-banner,
-#google_image_div
+#google_image_div,
+#launch-popover
 {
 	display:none;
 	opacity:0;
